minor re-factoring: code simplification